# VectorSpaceModel

./: .gitignore  Cargo.toml  README.md
benches/: document_vector.rs  term_indexer.rs  vector.rs  vector_store.rs
src/: dim_map.rs  document.rs  document_vector.rs  error.rs  index.rs  inv_index.rs  lib.rs  lock_step.rs  metadata.rs  term_indexer.rs  traits.rs  vector.rs  vector_store.rs
src/term_store/: item.rs  mod.rs
